testsuite/tests/aggregate/invalid-checks/aggr6.gpr
aggregate project Aggr6 is
   for Project_Files use ("default.gpr");
end Aggr6;
